@@ -1,5 +1,12 @@
 2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Utils.h,
+	  src/Utils.cc: added convenience function
+	* src/DialogManageFlags.cc,
+	  src/Win_GParted.cc: cleanups
+
+2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/DialogManageFlags.h,
 	  src/DialogManageFlags.cc,
 	  src/Win_GParted.cc: improved behaviour of flagmanagementdialog.
